<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="cn.syutung.jisuanqi.About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="216dp"
            android:layout_height="184dp"
            android:layout_weight="4"
            android:background="@color/myColor"
            android:textColor="@color/myWhite"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="180dp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/myColor"
            android:text="@string/syutung"
            android:textColor="@color/myWhite"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="389dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/myColor"
            android:gravity="center"
            android:text="@string/wangxudong_syutung_cn"
            android:textColor="@color/myWhite"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="413dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/myColor"
            android:text="@string/jianjie"
            android:textColor="@color/myWhite"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="364dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/myColor"
            android:gravity="center"
            android:text="@string/jianjie2"
            android:textColor="@color/myWhite"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="438dp" />

        <TextView
            android:id="@+id/kaiyuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/myColor"
            android:text="@string/kaiyuan"
            android:textColor="@color/myWhite"
            tools:layout_editor_absoluteX="258dp"
            tools:layout_editor_absoluteY="906dp" />

        <TextView
            android:id="@+id/yinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yinsi" />
    </LinearLayout>

</RelativeLayout>
