<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center"
    tools:context="cn.syutung.jisuanqi.JinZhi">

    <LinearLayout
        android:layout_width="522dp"
        android:layout_height="857dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/more"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@mipmap/uiphoto30"
                android:gravity="center"
                android:text="@string/more"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/uiphoto1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/jinzhizhuanhuan"
                android:textSize="18sp"
                android:visibility="visible" />


            <Button
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@mipmap/uiphoto30"
                android:gravity="center"
                android:text="@string/aboutme"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/shijinzhi"
                android:textColor="@color/myWhite"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/shijinzhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@mipmap/uiphoto27"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/myWhite"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/bajinzhi"
                android:textColor="@color/myWhite"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/bajinzhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:autofillHints=""
                android:background="@mipmap/uiphoto27"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/myWhite"
                android:textSize="24sp"
                tools:text="5555555555555555555555555555555555555555555555" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/erjinzhi"
                android:textColor="@color/myWhite"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/erjinzhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@mipmap/uiphoto27"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/myWhite"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/shiliujinzhi"
                android:textColor="@color/myWhite"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/shiliujinzhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@mipmap/uiphoto27"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="@color/myWhite"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <Button
                android:id="@+id/qingkong"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@mipmap/button10"
                android:text="@string/qingkong"
                android:textColor="@color/myWhite"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <Button
                android:id="@+id/quren"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/button10"
                android:text="@string/zhuanhuan"
                android:textColor="@color/myWhite"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/usingshixuang"
                android:textSize="18sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
